--- a/templates/index.html
+++ b/templates/index.html
@@ -3,5 +3,6 @@
 {% block conteudo %}
 
 <h1 class="bg-warning text-center">Página Inicial</h1>
+<h2 class="bg-info">Projeto Final</h2>
 
 {% endblock %}
