--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,17 @@
 
 {% block conteudo %}
 
-<h1 class="bg-warning text-center">Página Inicial</h1>
+<h1 class="bg-warning text-center">Página Inicial do Ismael Silva Pinho</h1>
 <h2 class="bg-info">Projeto Final</h2>
+<form class="m-auto w-25 mt-4 border border-black p-3">
+    <div>
+        <label for="nome">Nome:</label>
+        <input class="w-100" type="text" id="nome" name="nome" placeholder="digite seu nome">
+    </div>
+    <div>
+        <label for="senha">Senha:</label>
+        <input class="w-100" type="password" id="senha" name="senha" placeholder="digite sua senha">
+    </div>
+</form>
 
 {% endblock %}
