--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Final</title>
+    <title>Sistema de Ordem de Serviços</title>
     <link rel="stylesheet" href="{{ url_for('static',
     filename='css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 
 <body>
