--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 .card1 {
-    box-shadow: 2px 2px 3px black;
+    box-shadow: 2px 2px 8px 3px black;
     border-radius: 5px;
 }
 
@@ -22,4 +22,5 @@ a {
     text-decoration: none;
     color: white;
     margin-left: 10px;
+    font-size: 15px;
 }
