--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,12 @@
 <div class="container card1 mt-4">
     <h2 class="text-center">Menu</h2>
     <div class="p-4 box">
-        <a href="{{url_for('CadastrarVeiculos')}}" class="botao">➕ Cadastrar Clientes</a>
-        <a href="{{url_for('CadastrarVeiculos')}}" class="botao">➕ Cadastrar Veículos</a>
-        <a href="{{url_for('CadastrarVeiculos')}}" class="botao">➕ Cadastrar Mecânicos</a>
-        <a href="{{url_for('CadastrarVeiculos')}}" class="botao">➕ Criar OS</a>
-        <a href="{{url_for('CadastrarVeiculos')}}" class="botao">➕ Gerenciar OS</a>
-        <a href="{{url_for('CadastrarVeiculos')}}" class="botao">➕ Estoque</a>
+        <a href="{{url_for('CadastrarCliente')}}" class="botao d-flex justify-content-center align-items-center">👤 Cadastrar Clientes</a>
+        <a href="{{url_for('CadastrarVeiculos')}}" class="botao d-flex justify-content-center align-items-center">🚗 Cadastrar Veículos</a>
+        <a href="{{url_for('CadastrarMecanicos')}}" class="botao d-flex justify-content-center align-items-center">🧑‍🔧 Cadastrar Mecânicos</a>
+        <a href="{{url_for('CriarOs')}}" class="botao d-flex justify-content-center align-items-center">📝 Criar OS</a>
+        <a href="{{url_for('CadastrarVeiculos')}}" class="botao d-flex justify-content-center align-items-center">🗂️ Gerenciar OS</a>
+        <a href="{{url_for('CadastrarVeiculos')}}" class="botao d-flex justify-content-center align-items-center">📦 Estoque</a>
     </div>
 </div>
 <div class="container card1 mt-4">
