Login e Botões do Menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Ordem de Serviços</title>
+    <title>ISP Serviços</title>
     <link rel="stylesheet" href="{{ url_for('static',
     filename='css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    {% block head %}{% endblock %}
 </head>
 
 <body>
@@ -16,6 +18,7 @@
     {% endblock %}
 
     <script src="js/bootstrap.bundle.min.js"></script>
+    {% block scripts %}{% endblock %}
 </body>
 
 </html>
