--- a/templates/painelServicos.html
+++ b/templates/painelServicos.html
@@ -15,6 +15,7 @@
         <a href="{{url_for('CriarOs')}}" class="botao d-flex justify-content-center align-items-center"><i class="fas fa-file-alt"></i>Criar OS</a>
         <a href="{{url_for('CadastrarVeiculos')}}" class="botao d-flex justify-content-center align-items-center"><i class="fas fa-folder-open"></i>Gerenciar OS</a>
         <a href="{{url_for('CadastrarVeiculos')}}" class="botao d-flex justify-content-center align-items-center"><i class="fas fa-box"></i>Estoque</a>
+        <a href="{{url_for('logout')}}" class="botao d-flex justify-content-center align-items-center"><i class="fas fa-sign-out-alt"></i>Sair</a>
     </div>
 </div>
 <div class="container card1 mt-4">
