--- a/static/style.css
+++ b/static/style.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    gap: 10px;
 }
 
 .botao {
@@ -20,7 +21,7 @@
     text-decoration: none;
     border-radius: 10px;
     padding: 20px 30px;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: all 0.2s ease;
@@ -48,6 +49,4 @@ a {
     display: block;
     text-decoration: none;
     color: white;
-    margin-left: 10px;
-    font-size: 15px;
 }
