Css do Menu!!!!

--- a/static/style.css
+++ b/static/style.css
@@ -9,10 +9,7 @@
 }
 
 .box {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 10px;
+    display: block;
 }
 
 .botao {
