Reajuste nos Botões!!!

--- a/templates/painelServicos.html
+++ b/templates/painelServicos.html
@@ -8,7 +8,7 @@
 </div>
 <div class="container card1 mt-4">
     <h2 class="text-center">Menu</h2>
-    <div class="p-4 box">
+    <div class="p-4 box d-lg-flex justify-content-lg-center gap-lg-2">
         <a href="{{url_for('CadastrarCliente')}}" class="botao d-flex justify-content-center align-items-center"><i class="fas fa-user-plus"></i>Cadastrar Cliente</a>
         <a href="{{url_for('CadastrarVeiculos')}}" class="botao d-flex justify-content-center align-items-center"><i class="fas fa-car"></i>Cadastrar Veículos</a>
         <a href="{{url_for('CadastrarMecanicos')}}" class="botao d-flex justify-content-center align-items-center"><i class="fas fa-wrench"></i>Cadastrar Mecânicos</a>
