--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,8 @@
 .card1 {
     box-shadow: 2px 2px 8px 3px black;
     border-radius: 5px;
+    width: 95%;
+    margin-bottom: 30px;
 }
 
 .titulo {
@@ -29,11 +31,6 @@
 
 .botao:hover {
     background-color: #0056b3;
-    transform: scale(0.9);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-.botao:active {
     transform: scale(0.9);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
