--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ISP Serviços</title>
-    <link rel="stylesheet" href="{{ url_for('static',
-    filename='css/bootstrap.min.css') }}">
+    <link rel="shortcut icon" href="{{url_for('static',
+    filename='image/icone.png')}}" type="image/png">
+    <link rel="stylesheet" href="{{url_for('static',
+    filename='css/bootstrap.min.css')}}">
     <link rel="stylesheet" href="/static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     {% block head %}{% endblock %}
