--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,8 @@
 
 {% block head %}
 
-<link rel="stylesheet" href="/static/login.css">
+<link rel="stylesheet" href="{{url_for('static',
+    filename='css/login.css')}}">
 
 {% endblock %}
 
@@ -18,7 +19,7 @@
         <form id="formLogin" class="form" action="{{url_for('Login')}}" method="post">
             <h2>Login</h2>
             <div class="form-group">
-                <input type="email" name="email" id="email" placeholder="Email" required />
+                <input type="email" name="email" id="email" placeholder="Email" required /> 
             </div>
             <div class="form-group">
                 <input type="password" name="senha" id="senha" placeholder="Senha" required />
@@ -55,6 +56,7 @@
 
 {% block scripts %}
 
-<script src="/static/login.js"></script>
+<script src="{{url_for('static',
+    filename='js/login.js')}}"></script>
 
 {% endblock %}
