--- a/templates/painelServicos.html
+++ b/templates/painelServicos.html
@@ -9,13 +9,13 @@
 <div class="container card1 mt-4">
     <h2 class="text-center">Menu</h2>
     <div class="p-4 box d-lg-flex justify-content-lg-center gap-lg-2">
-        <a href="{{url_for('CadastrarCliente')}}" class="botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-user-plus"></i>Clientes</a>
-        <a href="{{url_for('CadastrarVeiculos')}}" class="botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-car"></i>Veículos</a>
-        <a href="{{url_for('CadastrarMecanicos')}}" class="botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-wrench"></i>Mecânicos</a>
-        <a href="{{url_for('CriarOs')}}" class="botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-file-alt"></i>Criar OS</a>
-        <a href="{{url_for('CadastrarVeiculos')}}" class="botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-folder-open"></i>Gerenciar OS</a>
-        <a href="{{url_for('CadastrarVeiculos')}}" class="botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-box"></i>Estoque</a>
-        <a href="{{url_for('logout')}}" class="botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-sign-out-alt"></i>Sair</a>
+        <a href="{{url_for('CadastrarCliente')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-user"></i>Clientes</a>
+        <a href="{{url_for('CadastrarVeiculos')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-car"></i>Veículos</a>
+        <a href="{{url_for('CadastrarMecanicos')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-wrench"></i>Mecânicos</a>
+        <a href="{{url_for('CriarOs')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-file-alt"></i>Criar OS</a>
+        <a href="{{url_for('CadastrarVeiculos')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-folder-open"></i>Gerenciar OS</a>
+        <a href="{{url_for('CadastrarVeiculos')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-box"></i>Estoque</a>
+        <a href="{{url_for('logout')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-sign-out-alt"></i>Sair</a>
     </div>
 </div>
 <div class="container card1">
@@ -24,5 +24,12 @@
         Ordens de Serviço
     </div>
 </div>
+
+{% endblock %}
+
+{% block scripts %}
+
+<script src="{{url_for('static',
+    filename='js/painelServicos.js')}}"></script>
 
 {% endblock %}
