--- a/static/css/login.css
+++ b/static/css/login.css
@@ -18,7 +18,7 @@ body {
 
     .left, .right {
       width: 50%;
-      padding: 40px;
+      padding: 20px;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -116,4 +116,14 @@ body {
       border-radius: 5px;
       font-weight: bold;
       cursor: pointer;
+    }
+
+    @media (max-width: 800px) {
+      .container {
+        width: 95%;
+      }
+
+      .left, .right {
+        padding: 10px;
+      }
     }
