--- a/templates/cadastrarveiculos.html
+++ b/templates/cadastrarveiculos.html
@@ -4,14 +4,14 @@
 
 <h1 class="text-center mt-4">Cadastrar Veículo</h1>
 <div class="container mt-2">
-    <form class="form-control p-3">
-        <div>
-            <label class="form-label" for="modelo">Modelo:</label>
-            <input class="form-control" type="text" id="modelo" name="modelo">
-        </div>
+    <form class="form-control p-3" action="{{url_for('CadastrarVeiculos')}}" method="post">
         <div>
             <label class="form-label" for="marca">Marca:</label>
             <input class="form-control" type="text" id="marca" name="marca">
+        </div>
+        <div>
+            <label class="form-label" for="modelo">Modelo:</label>
+            <input class="form-control" type="text" id="modelo" name="modelo">
         </div>
         <div>
             <label class="form-label" for="ano">Ano:</label>
@@ -25,6 +25,16 @@
             <label class="form-label" for="observacoes">Observações:</label>
             <input class="form-control" type="text" id="observacoes" name="observacoes">
         </div>
+        <div class="mt-3">
+            <label class="form-label" for="id_cliente">Cliente:</label>
+            <select name="id_cliente" id="id_cliente">
+                <option value="">-- selecione o cliente --</option>
+                {% for cliente in resultado %}
+                    <option value="{{cliente.id}}">{{cliente.nome}}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <button type="submit" class="btn btn-primary mt-3">Cadastrar</button>
     </form>
 </div>
 
