--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
             <button type="submit">Entrar</button>
         </form>
 
-        <form id="formCadastro" class="form" action="{{url_for('CadastrarCliente')}}" method="post" style="display: none;">
+        <form id="formCadastro" class="form" action="{{url_for('CadastrarUsuario')}}" method="post" style="display: none;">
             <h2>Crie a sua conta</h2>
             <div class="form-group">
                 <input type="text" name="nome" id="nome" placeholder="Nome completo" required />
