--- a/templates/painelServicos.html
+++ b/templates/painelServicos.html
@@ -9,9 +9,9 @@
 <div class="container card1 mt-4">
     <h2 class="text-center">Menu</h2>
     <div class="p-4 box d-lg-flex justify-content-lg-center gap-lg-2">
-        <a href="{{url_for('CadastrarCliente')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-user"></i>Clientes</a>
-        <a href="{{url_for('CadastrarVeiculos')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-car"></i>Veículos</a>
-        <a href="{{url_for('CadastrarMecanicos')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-wrench"></i>Mecânicos</a>
+        <a href="{{url_for('BuscarClientes')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-user"></i>Clientes</a>
+        <a href="{{url_for('BuscarVeiculos')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-car"></i>Veículos</a>
+        <a href="{{url_for('BuscarMecanicos')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-wrench"></i>Mecânicos</a>
         <a href="{{url_for('CriarOs')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-file-alt"></i>Criar OS</a>
         <a href="{{url_for('CadastrarVeiculos')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-folder-open"></i>Gerenciar OS</a>
         <a href="{{url_for('CadastrarVeiculos')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-box"></i>Estoque</a>
