--- a/templates/painelServicos.html
+++ b/templates/painelServicos.html
@@ -12,9 +12,8 @@
         <a href="{{url_for('BuscarClientes')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-user"></i>Clientes</a>
         <a href="{{url_for('BuscarVeiculos')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-car"></i>Veículos</a>
         <a href="{{url_for('BuscarMecanicos')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-wrench"></i>Mecânicos</a>
-        <a href="{{url_for('CriarOs')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-file-alt"></i>Criar OS</a>
-        <a href="{{url_for('CadastrarVeiculos')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-folder-open"></i>Gerenciar OS</a>
-        <a href="{{url_for('CadastrarVeiculos')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-box"></i>Estoque</a>
+        <a href="{{url_for('CriarOs')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-folder-open"></i>Gerenciar OS</a>
+        <a href="{{url_for('Estoque')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-box"></i>Estoque</a>
         <a href="{{url_for('logout')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-sign-out-alt"></i>Sair</a>
     </div>
 </div>
