--- a/templates/OS.html
+++ b/templates/OS.html
@@ -1,66 +1,58 @@
 {% extends 'base.html' %}
 
+{% block head %}
+
+<link rel="stylesheet" href="{{url_for('static',
+    filename='css/os.css')}}">
+
+{% endblock %}
+
 {% block conteudo %}
 
-<h1 class="bg-warning text-center">Ordem de Serviço</h1>
-<form class="m-auto w-25 mt-4 border border-black p-3">
-    <div>
-        <label for="Cliente">Cliente:</label>
-        <input class="w-100" type="text" id="cliente" name="cliente" placeholder="digite o nome do cliente">
-    </div>
-    <div>
-        <label for="Veículo">Veículo:</label>
-        <input class="w-100" type="text" id="veiculo" name="veiculo" placeholder="digite o veículo">
-    </div>
-    <div>
-        <label for="Data de abertura">Data de abertura:</label>
-        <input class="w-100" type="text" id="data_abertura" name="data_abertura" placeholder="digite a data de abertura">
-    </div>
-    <div>
-        <label for="Status">Status:</label>
-        <select name="status" id="status">
-            <option value="">-- selecione --</option>
-            <option value="aberto">Aberto</option>
-            <option value="em_andamento">Em andamento</option>
-            <option value="concluido">Concluído</option>
-        </select>
-    </div>
-   
-    <div>
-        <label for="Problema relatado pelo cliente">Problema relatado pelo cliente:</label>
-        <input class="w-100" type="text" id="problema" name="problema" placeholder="digite o problema relatado pelo cliente">
-    </div>
-    <div>
-        <label for="Diagnóstico da oficina">Diagnóstico da oficina:</label>
-        <input class="w-100" type="text" id="diagnostico" name="diagnostico" placeholder="digite o diagnóstico da oficina">
-    </div>
-     <div>
-        <label for="Mecanico designado"></label>Mecânico designado:</label>
-        <input class="w-100" type="text" id="mecanico" name="mecanico" placeholder="digite o mecânico designado">
-    </div>
-     <div>
-        <label for="servicos">Itens da OS:</label>
-        <select name="servicos" id="servicos">
-            <option value="">-- selecione --</option>
-            <option value="troca_oleo">Troca de óleo</option>
-            <option value="alinhamento">Alinhamento</option>
-            <option value="balanceamento">Balanceamento</option>
-            <option value="freios">Freios</option>
-            <option value="suspensao">Suspensão</option>
-            <option value="motor">Motor</option>
-        </select>
-        <br>
-        <label for="pecas">Peças:</label>
-        <select name="pecas" id="pecas">
-            <option value="">-- selecione --</option>
-            <option value="filtros">Filtros</option>
-            <option value="pneus">Pneus</option>
-            <option value="baterias">Baterias</option>
-            <option value="pastilhas_freio">Pastilhas de freio</option>
-            <option value="discos_freio">Discos de freio</option>
-        </select>
+<h1 class="titulo_os text-center">Ordens de Serviço</h1>
 
-    </div>
-</form>
+<div class="box_os d-flex flex-column">
+    <a href="{{url_for('CadastrarOs')}}"
+        class="botao-menu botao_os mt-4"><i
+            class="fas fa-file-alt"></i>Criar OS</a>
+    <table>
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Telefone</th>
+                <th>E-mail</th>
+                <th>Cpf</th>
+                <th>Endereço</th>
+                <th>Data do Cadastro</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for cliente in listaClientes %}
+            <tr>
+                <td>{{cliente.nome}}</td>
+                <td>{{cliente.telefone}}</td>
+                <td>{{cliente.email}}</th>
+                <td>{{cliente.documento}}</td>
+                <td>{{cliente.endereco}}</td>
+                <td>{{cliente.criado_em}}</td>
+                <td>
+                    <div class="d-flex">
+                        <a href="#" class="editar"><i class="fa fa-edit"></i></a>
+                        <a href="#" class="excluir"><i class="fa fa-trash"></i></a>
+                    </div>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+
+{% endblock %}
+
+{% block scripts %}
+
+<script src="{{url_for('static',
+    filename='js/painelServicos.js')}}"></script>
 
 {% endblock %}
