mudança na pagina cadastrar cliente

--- a/templates/cadastrarclientes.html
+++ b/templates/cadastrarclientes.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %}
 
+{% block head %}
+
+<link rel="stylesheet" href="{{url_for('static',
+    filename='css/cadastrarclientes.css')}}">
+
+{% endblock %}
+
 {% block conteudo %}
 
-<h1 class="text-center mt-4">Cadastrar Cliente</h1>
+
 <div class="container mt-2">
-    <form class="form-control p-3" action="{{url_for('CadastrarClientes')}}" method="post">
+    <form class="form-control p-3 box1" action="{{url_for('CadastrarClientes')}}" method="post">
         <div>
             <label class="form-label" for="nome">Nome:</label>
             <input class="form-control" type="text" id="nome" name="nome">
