--- a/templates/cadastrarclientes.html
+++ b/templates/cadastrarclientes.html
@@ -3,7 +3,7 @@
 {% block head %}
 
 <link rel="stylesheet" href="{{url_for('static',
-    filename='css/cadastrarclientes.css')}}">
+    filename='css/cadastrarcliente.css')}}">
 
 {% endblock %}
 
