--- a/templates/cadastrarveiculos.html
+++ b/templates/cadastrarveiculos.html
@@ -1,10 +1,16 @@
 {% extends 'base.html' %}
 
+{% block head %}
+
+<link rel="stylesheet" href="{{url_for('static',
+    filename='css/cadastrarveiculo.css')}}">
+
+{% endblock %}
+
 {% block conteudo %}
 
-<h1 class="text-center mt-4">Cadastrar Veículo</h1>
 <div class="container mt-2">
-    <form class="form-control p-3" action="{{url_for('CadastrarVeiculos')}}" method="post">
+    <form class="form-control box1 p-3" action="{{url_for('CadastrarVeiculos')}}" method="post">
         <div>
             <label class="form-label" for="marca">Marca:</label>
             <input class="form-control" type="text" id="marca" name="marca">
