--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,6 +20,7 @@
     background-color: #007bff;
     color: #ffffff;
     text-decoration: none;
+    width: 180px;
     border-radius: 10px;
     padding: 20px 30px;
     font-size: 15px;
