--- a/templates/painelServicos.html
+++ b/templates/painelServicos.html
@@ -6,9 +6,8 @@
     <h1 class="text-center">ISP Serviços</h1>
     <h5 class="text-center">Olá, seja bem-vindo(a) {{session.usuario_nome}}</h5>
 </div>
-<div class="container card1 mt-4">
-    <h2 class="text-center">Menu</h2>
-    <div class="p-4 box d-lg-flex justify-content-lg-center gap-lg-2">
+<div class="container mt-2">
+    <div class="box d-lg-flex justify-content-lg-center gap-lg-2">
         <a href="{{url_for('BuscarClientes')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-user"></i>Clientes</a>
         <a href="{{url_for('BuscarVeiculos')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-car"></i>Veículos</a>
         <a href="{{url_for('BuscarMecanicos')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-wrench"></i>Mecânicos</a>
@@ -17,7 +16,7 @@
         <a href="{{url_for('logout')}}" class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i class="fas fa-sign-out-alt"></i>Sair</a>
     </div>
 </div>
-<div class="container card1">
+<div class="container card1 mt-4">
     <h2 class="text-center">Relatórios</h2>
     <div class="p-4 box">
         Ordens de Serviço
