--- a/templates/OS.html
+++ b/templates/OS.html
@@ -9,13 +9,11 @@
 
 {% block conteudo %}
 
-<h1 class="titulo_os text-center">Ordens de Serviço</h1>
-
-<div class="box_os d-flex flex-column">
+<div class="box_os d-flex flex-column mt-4">
     <a href="{{url_for('CadastrarOs')}}"
-        class="botao-menu botao_os mt-4"><i
-            class="fas fa-file-alt"></i>Criar OS</a>
-    <table>
+        class="botao-menu botao_os"><i
+            class="fas fa-file-alt"></i>Cadastrar OS</a>
+    <table class="mt-2">
         <thead>
             <tr>
                 <th>Nome</th>
