--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,19 +1,12 @@
 .card1 {
-    box-shadow: 2px 2px 8px 3px black;
-    border-radius: 5px;
+    margin: auto;
     width: 95%;
-    margin-bottom: 30px;
-    padding-top: 20px;
 }
 
 .titulo {
-    height: 110px;
+    height: 80px;
     background-color: #007bff;
-    padding-top: 10px;
-}
-
-.box {
-    display: block;
+    color: white;
 }
 
 .botao {
@@ -46,5 +39,4 @@ a {
     display: block;
     text-decoration: none;
     color: white;
-    margin-top: 20px;
 }
