--- a/static/css/cadastrarmecanico.css
+++ b/static/css/cadastrarmecanico.css
@@ -9,7 +9,8 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-    width: 600px; 
+    width: 480px; 
     color: white;
-    margin-top: 100px;
+    margin-top: 50px;
+    margin-bottom: 30px;
 }
