--- a/static/css/veiculos.css
+++ b/static/css/veiculos.css
@@ -1,5 +1,4 @@
 table {
-    margin-top: 20px;
     border: 1px solid black;
     box-shadow: 2px 2px 8px 3px black;
     margin-bottom: 30px;
@@ -8,6 +7,7 @@ thead {
     text-align: center;
     background-color: #007bff;
     border: 1px solid black;
+    color: white;
 }
 
 th, tr, td {
@@ -18,12 +18,6 @@ th, tr, td {
 .box_veiculos {
     margin: auto;
     width: 95%;
-}
-
-.titulo_veiculos {
-    background-color: #007bff;
-    padding-top: 10px;
-    padding-bottom: 10px;
 }
 
 .editar {
@@ -65,10 +59,10 @@ th, tr, td {
 .botao_veiculos {
     background-color: #007bff;
     color: #ffffff;
-    width: 180px;
+    width: 250px;
     text-decoration: none;
     border-radius: 10px;
-    padding: 20px 30px;
+    padding: 10px 15px;
     font-size: 15px;
     font-weight: bold;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
