--- a/templates/cadastrar_peca.html
+++ b/templates/cadastrar_peca.html
@@ -1,17 +1,19 @@
-{% extends 'base.html' %}
+{% extends 'base_cadastros.html' %}
 
 {% block head %}
 
 <link rel="stylesheet" href="{{url_for('static',
-    filename='css/cadastrarpecas.css')}}">
+    filename='css/cadastrarpeca.css')}}">
 
 {% endblock %}
 
 {% block conteudo %}
 
-
-<div class="container mt-2">
+<div class="container">
     <form class="form-control p-3 box1" action="{{url_for('CadastrarPeca')}}" method="post">
+        <div>
+            <h2 class="text-center">Cadastrar Peça</h2>
+        </div>
         <div>
             <label class="form-label" for="nome">Nome:</label>
             <input class="form-control" type="text" id="nome" name="nome">
@@ -30,14 +32,21 @@
         </div>
          <div class="mt-3">
             <label class="form-label" for="id_subcategoria">Sub-Categoria:</label>
-            <select name="id_subcategoria" id="id_subcategoria">
+            <select name="id_subcategoria" id="id_subcategoria" class="opcoes">
                 <option value="">-- selecione uma sub-categoria --</option>
                 {% for subcategoria in resultado %}
                     <option value="{{subcategoria.id}}">{{subcategoria.nome}}</option>
                 {% endfor %}
             </select>
         </div>
-        <button type="submit" class="btn btn-primary mt-3">Cadastrar</button>
+        <div class="d-flex justify-content-center gap-2 mt-4">
+            <div>
+                <a href="{{url_for('Estoque')}}" class="btn btn-primary">Voltar</a>
+            </div>
+            <div>
+                <button type="submit" class="btn btn-success">Cadastrar</button>
+            </div>
+        </div>
     </form>
 </div>
 
