--- a/templates/cadastrar_subcategoria.html
+++ b/templates/cadastrar_subcategoria.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_cadastros.html' %}
 
 {% block head %}
 
@@ -9,23 +9,32 @@
 
 {% block conteudo %}
 
-
-<div class="container mt-2">
+<div class="container">
     <form class="form-control p-3 box1" action="{{url_for('CadastrarSubcategoria')}}" method="post">
+        <div>
+            <h2 class="text-center">Cadastrar Subcategoria</h2>
+        </div>
         <div>
             <label class="form-label" for="nome">Nome:</label>
             <input class="form-control" type="text" id="nome" name="nome">
         </div>
         <div class="mt-3">
             <label class="form-label" for="id_categoria">Categoria:</label>
-            <select name="id_categoria" id="id_categoria">
+            <select name="id_categoria" id="id_categoria" class="opcoes">
                 <option value="">-- selecione uma categoria --</option>
                 {% for categoria in resultado %}
                     <option value="{{categoria.id}}">{{categoria.nome}}</option>
                 {% endfor %}
             </select>
         </div>
-        <button type="submit" class="btn btn-primary mt-3">Cadastrar</button>
+         <div class="d-flex justify-content-center gap-2 mt-4">
+            <div>
+                <a href="{{url_for('Estoque')}}" class="btn btn-primary">Voltar</a>
+            </div>
+            <div>
+                <button type="submit" class="btn btn-success">Cadastrar</button>
+            </div>
+        </div>
     </form>
 </div>
 
