--- a/templates/cadastrarclientes.html
+++ b/templates/cadastrarclientes.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_cadastros.html' %}
 
 {% block head %}
 
@@ -9,9 +9,11 @@
 
 {% block conteudo %}
 
-
-<div class="container mt-2">
+<div class="container">
     <form class="form-control p-3 box1" action="{{url_for('CadastrarClientes')}}" method="post">
+        <div>
+            <h2 class="text-center">Cadastrar Cliente</h2>
+        </div>
         <div>
             <label class="form-label" for="nome">Nome:</label>
             <input class="form-control" type="text" id="nome" name="nome">
@@ -36,7 +38,14 @@
             <label class="form-label" for="senha">Senha:</label>
             <input class="form-control" type="password" id="senha" name="senha">
         </div>
-        <button type="submit" class="btn btn-primary mt-3">Cadastrar</button>
+        <div class="d-flex justify-content-center gap-2 mt-4">
+            <div>
+                <a href="{{url_for('BuscarClientes')}}" class="btn btn-primary">Voltar</a>
+            </div>
+            <div>
+                <button type="submit" class="btn btn-success">Cadastrar</button>
+            </div>
+        </div>
     </form>
 </div>
 
