--- a/templates/cadastrarveiculos.html
+++ b/templates/cadastrarveiculos.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_cadastros.html' %}
 
 {% block head %}
 
@@ -9,8 +9,11 @@
 
 {% block conteudo %}
 
-<div class="container mt-2">
+<div class="container">
     <form class="form-control box1 p-3" action="{{url_for('CadastrarVeiculos')}}" method="post">
+        <div>
+            <h2 class="text-center">Cadastrar Veículo</h2>
+        </div>
         <div>
             <label class="form-label" for="marca">Marca:</label>
             <input class="form-control" type="text" id="marca" name="marca">
@@ -33,14 +36,21 @@
         </div>
         <div class="mt-3">
             <label class="form-label" for="id_cliente">Cliente:</label>
-            <select name="id_cliente" id="id_cliente">
+            <select name="id_cliente" id="id_cliente" class="opcoes">
                 <option value="">-- selecione o cliente --</option>
                 {% for cliente in resultado %}
-                    <option value="{{cliente.id}}">{{cliente.nome}}</option>
+                <option value="{{cliente.id}}">{{cliente.nome}}</option>
                 {% endfor %}
             </select>
         </div>
-        <button type="submit" class="btn btn-primary mt-3">Cadastrar</button>
+        <div class="d-flex justify-content-center gap-2 mt-4">
+            <div>
+                <a href="{{url_for('BuscarVeiculos')}}" class="btn btn-primary">Voltar</a>
+            </div>
+            <div>
+                <button type="submit" class="btn btn-success">Cadastrar</button>
+            </div>
+        </div>
     </form>
 </div>
 
