--- a/templates/clientes.html
+++ b/templates/clientes.html
@@ -9,29 +9,10 @@
 
 {% block conteudo %}
 
-<h1 class="titulo_clientes text-center">Clientes</h1>
-
-<div class="box_clientes d-flex gap-4">
+<div class="box_clientes d-flex flex-column justify-content-center mt-4">
     <a href="{{url_for('CadastrarClientes')}}" class="botao-menu botao_clientes"><i
             class="fas fa-user-plus"></i>Cadastrar Cliente</a>
-    <a href="{{url_for('BuscarVeiculos')}}"
-        class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i
-            class="fas fa-car"></i>Veículos</a>
-    <a href="{{url_for('BuscarMecanicos')}}"
-        class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i
-            class="fas fa-wrench"></i>Mecânicos</a>
-    <a href="{{url_for('CriarOs')}}"
-        class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i
-            class="fas fa-folder-open"></i>Gerenciar OS</a>
-    <a href="{{url_for('Estoque')}}"
-        class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i
-            class="fas fa-box"></i>Estoque</a>
-    <a href="{{url_for('logout')}}"
-        class="botao-menu botao mb-2 mb-lg-0 d-flex justify-content-center align-items-center"><i
-            class="fas fa-sign-out-alt"></i>Sair</a>
-</div>
-<div class="box_clientes">
-    <table>
+    <table class="mt-2">
         <thead>
             <tr>
                 <th>Nome</th>
