--- a/templates/editar_mecanicos.html
+++ b/templates/editar_mecanicos.html
@@ -1,10 +1,19 @@
 {% extends 'base.html' %}
 
+{% block head %}
+
+<link rel="stylesheet" href="{{url_for('static',
+    filename='css/editar_mecanico.css')}}">
+
+{% endblock %}
+
 {% block conteudo %}
 
-<h1 class="text-center mt-4">Editar Cliente</h1>
-<div class="container mt-2">
-    <form class="form-control p-3" action="{{url_for('EditarMecanico', id = resultado.id)}}" method="post">
+<div class="container mt-4 mb-5">
+    <form class="form-control p-3 box1" action="{{url_for('EditarMecanico', id = resultado.id)}}" method="post">
+        <div>
+            <h1 class="text-center">Editar Mecânico</h1>
+        </div>
         <div>
             <label class="form-label" for="nome">Nome:</label>
             <input class="form-control" type="text" id="nome" name="nome" value="{{resultado.nome}}">
@@ -13,7 +22,14 @@
             <label class="form-label" for="especialidade">Especialidade:</label>
             <input class="form-control" type="text" id="especialidade" name="especialidade" value="{{resultado.especialidade}}">
         </div>
-        <button type="submit" class="btn btn-warning mt-3">Atualizar</button>
+         <div class="d-flex justify-content-center gap-2 mt-4">
+            <div>
+                <a href="{{url_for('BuscarMecanicos')}}" class="btn btn-secondary">Cancelar</a>
+            </div>
+            <div>
+                <button type="submit" class="btn btn-success">Salvar</button>
+            </div>
+        </div>
     </form>
 </div>
 
