--- a/templates/editar_pecas.html
+++ b/templates/editar_pecas.html
@@ -1,10 +1,19 @@
 {% extends 'base.html' %}
 
+{% block head %}
+
+<link rel="stylesheet" href="{{url_for('static',
+    filename='css/editar_peca.css')}}">
+
+{% endblock %}
+
 {% block conteudo %}
 
-<h1 class="text-center mt-4">Cadastrar Peça</h1>
-<div class="container mt-2">
-    <form class="form-control p-3" action="{{url_for('EditarPeca', id = pecas.id, id_subcategoria = idSubcategoria.id)}}" method="post">
+<div class="container mt-4 mb-5">
+    <form class="form-control p-3 box1" action="{{url_for('EditarPeca', id = pecas.id, id_subcategoria = idSubcategoria.id)}}" method="post">
+        <div>
+            <h1 class="text-center">Editar Peça</h1>
+        </div>
         <div>
             <label class="form-label" for="nome">Nome:</label>
             <input class="form-control" type="text" id="nome" name="nome" value="{{pecas.nome}}">
@@ -30,7 +39,14 @@
                 {% endfor %}
             </select>
         </div>
-        <button type="submit" class="btn btn-warning mt-3">Atualizar</button>
+        <div class="d-flex justify-content-center gap-2 mt-4">
+            <div>
+                <a href="{{url_for('Estoque')}}" class="btn btn-secondary">Cancelar</a>
+            </div>
+            <div>
+                <button type="submit" class="btn btn-success">Salvar</button>
+            </div>
+        </div>
     </form>
 </div>
 
